# tcpudp

./: .clang-format  .gitignore  AGENTS.md  Aavante.md  Avante.md  CLAUDE.md  MEMORY_MANAGEMENT.md  NON_BLOCKING_IO.md  PERFORMANCE_IMPROVEMENTS.md  build.py  cloudflare.bat  cloudflare.sh  custom.agentic.avanterules  custom.agentic.avanterules.bak  deploy_vpn2.sh  makefile  project.agentic.avanterules  run  run.cmd  run.py  run.sh  run_github.sh  run_vpn2.sh  test.cmd  test.py  trigger.bat  trigger_run.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  notes.md  perf-test.yml  release.yml  run.yml
doc/: DataProcess.md  VirtualChannel.md  allowip.md  architecture.md  client.md  project_overview.md  server.md  test.md  vc.md  vc_disconnect.md
docs/: API.md  Architecture.md  Configuration.md  Development.md  Examples.md  README.md
github_run/: cloudflare.bat  cloudflare.sh  run_info.json
src/: CMakeLists.txt  makefile
src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientConfiguration.cpp  ClientConfiguration.h  ClientDataProcessorContext.h  CommunicateStates.h  Configuration.cpp  Configuration.h  ISocket.h  LocalUdpSocket.cpp  LocalUdpSocket.h  PeerTcpSocket.cpp  PeerTcpSocket.h  SocketManager.cpp  SocketManager.h  StateBindSent.cpp  StateBindSent.h  StateError.h  StateSyncSent.cpp  StateSyncSent.h  TcpToUdpQueue.cpp  TcpToUdpQueue.h  UdpToTcpQueue.cpp  UdpToTcpQueue.h  config.json  main.cpp
src/common/: BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  Counter.h  DataHandler.h  DataNotifier.cpp  DataNotifier.h  DataProcessThread.cpp  DataProcessThread.h  DataProcessorContext.cpp  DataProcessorContext.h  DataProcessorState.h  DataProcessorThread.cpp  DataProcessorThread.h  IDataProcessor.h  IDataReader.h  Lock.h  LockFreeQueue.h  Log.cpp  Log.h  MemoryMonitor.cpp  MemoryMonitor.h  MemoryPool.cpp  MemoryPool.h  MsgDeserializer.cpp  MsgDeserializer.h  MsgSerializer.cpp  MsgSerializer.h  MsgType.h  MultiTcpConnVirtualChannel.h  NetworkScore.cpp  NetworkScore.h  NetworkScoreCalculator.cpp  NetworkScoreCalculator.h  PerformanceCounter.cpp  PerformanceCounter.h  PerformanceMonitor.h  Protocol.cpp  Protocol.h  QueueManager.cpp  (+37 more)
src/proto/: CMakeLists.txt  message.proto
src/reverse/: CMakeLists.txt  config.h  reverse.cpp  udpserver.cpp  udpserver.h
src/server/: CMakeLists.txt  ClientUdpSocketManager.h  Configuration.cpp  Configuration.h  Peer.cpp  Peer.h  ReplaceSlotPolicy.h  Server.cpp  Server.h  ServerConfiguration.cpp  ServerConfiguration.h  ServerQueueManager.cpp  ServerQueueManager.h  SocketManager.cpp  SocketManager.h  TCPDataQueue.cpp  TCPDataQueue.h  TCPQueueToUDPThreadPool.cpp  TCPQueueToUDPThreadPool.h  TCPToQueueThread.cpp  TCPToQueueThread.h  TCPToUDPSocketMap.cpp  TCPToUDPSocketMap.h  TcpDataQueue.cpp  TcpDataQueue.h  TcpQueueToUdpThread.cpp  TcpQueueToUdpThread.h  TcpQueueToUdpThreadPool.cpp  TcpQueueToUdpThreadPool.h  TcpToQueueThread.cpp  TcpToQueueThread.h  TcpToUdpSocketMap.cpp  TcpToUdpSocketMap.h  UDPDataQueue.cpp  UDPDataQueue.h  UDPSocketAddressMap.cpp  UDPSocketAddressMap.h  UDPToTCPSocketMap.cpp  UDPToTCPSocketMap.h  UdpDataQueue.cpp  (+14 more)
src/test/: client.py  server.py
src/test_vc_client/: CMakeLists.txt  main.cpp
src/tests/: BlockingQueue_Test.cpp  CMakeLists.txt  ConnectionManager_Test.cpp  Log_Test.cpp  Peer_Test.cpp  Protocol_Test.cpp  ReplaceSlotPolicy_Test.cpp  ResendConnection_Test.cpp  Socket_Test.cpp  VirtualChannel_Test.cpp  sample.cpp  test_main.cpp
src/tests/Common/: Lock_Test.cpp
src/tests/client/: Handshake_Test.cpp  MockSocket.h  PeerTcpSocket_Test.cpp
src/tests/server/: UdpToTcpSocketMap_Test.cpp
test/: integration_test.py
trigger/: 1  1784121244  1784124855  1784125493  1784125761  1784126217  1784127366  1784128695  1784129265  1784161731_v2  1784162053  1784163479  1784173019  1784173967  1784174340  1784174722  1784174898
